--- a/virus_web/index_province.html
+++ b/virus_web/index_province.html
@@ -39,6 +39,9 @@
                     <h2>肺炎疫情实时动态播报</h2>
                 </div>
             </div>
+            <form class="form_date" action="date.jsp" method="POST" >
+                日期: <input type="text" name="user_date" placeholder="输入格式：xxxx.xx.xx" />
+            </form>
             <div class="cover_cards">
                 <div class="cover_data_china noNewsScroll">
                     <div class="cover_confirm">
@@ -55,17 +58,20 @@
                       </div>
                       <div class="cover_today_confirm">
                         <h4>现有确诊</h4>
-                        <div class="number">-</div>
+                        <div class="number">1109</div>
                       </div>
                       <div class="cover_severe">
                         <h4>现有重症</h4>
-                        <div class="number">-</div>
+                        <div class="number">343</div>
                       </div>
                       <div class="cover_suspect">
-                        <h4>现有疑似</h4>
+                        <h4>累计疑似</h4>
                         <div class="number">-</div>
                       </div>
-                      <div class="cover_time">　</div>
+                      <div class="cover_time">
+                        <h5>截止日期：</h5>
+                    </div>
+
 
                 </div>
             </div>
